# mindhunter

./: .coverage  .gitignore  PlottableObject.py  README.md  StatisticalObject.py  StatisticalUtilities.py  a.py  build.sh  main.py  pyproject.toml
..github/workflows/: release.yaml  test.yaml
.github/workflows/: release.yaml  test.yaml
src/: __init__.py
src/core/: analyzer.py
src/mindhunter/: __init__.py
src/mindhunter/core/: analyzer.py
src/mindhunter/statistics/: __init__.py  distributions.py  hypothesis_tests.py
src/mindhunter/utils/: __init__.py  toolkit.py
src/mindhunter/visualization/: __init__.py  plotter.py  stat_plotter.py
src/statistics/: __init__.py  descriptive.py  distributions.py  hypothesis_tests.py
src/utils/: toolkit.py
src/visualization/: distributions.py  plotter.py
tests/: test_dataframe_creation.py
