[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindhunter"
version = "0.1.0"
description = "DataFrame extensions for data analysis."
readme = "README.md"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["src/mindhunter"]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "faker>=19.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/mindhunter --cov-report=term-missing"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "faker>=19.0.0",
]


# authors = [
#     { name="Framebuffer", email="26495556+Framebuffers@users.noreply.github.com"}
# ]
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "Operating System :: OS Independent",
# ]
# dependencies = [ # when adding dependencies, always choose the latest minor version *unless* needed otherwise for security reasons.
#     "pandas>=2.0.0",
#     "numpy>=1.24.0",
#     "seaborn>=0.12.0",
#     "matplotlib>=3.7.0",
#     "scipy>=1.10.0",]


# [project.optional-dependencies]
# dev = [
#     "pytest>=8.4.0",
#     "pytest-cov>=7.0.0",
#     "faker>=19.0.0",
# ]

# [project.urls]
# Homepage = "https://github.com/framebuffers/mindhunter"
# "Bug Tracker" = "https://github.com/framebuffers/mindhunter/issues"


# [project.scripts]
# test = "tests.postbuild:test"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"


# [tool.uv.build-backend]
# module-root = "src/"
# module-name = "mindhunter"

# [tool.pytest.ini_options]
# testpaths = ["tests"]
# python_files = ["test_*.py"]
# addopts = "--cov=src/project_name --cov-report=term-missing"

# [tool.uv]
# dev-dependencies = [
#     "pytest>=8.4.0",
#     "pytest-cov>=7.0.0",
#     "faker>=37.0.0",
# ]