[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindhunter"
version = "0.1.0"
description = "DataFrame extensions for data analysis."
readme = "README.md"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["src/mindhunter"]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "faker>=19.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/mindhunter --cov-report=term-missing"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "faker>=19.0.0",
]